[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.42.1"
streamlit-option-menu = "^0.4.0"
joblib = "^1.4.2"
geopandas = "^1.0.1"
shapely = "^2.0.7"
folium = "^0.19.4"
transformers = "^4.49.0"
streamlit-folium = "^0.24.0"
scikit-learn = "1.3.2"
xgboost = "^2.1.4"
lightgbm = "^4.6.0"
mistralai = "^1.5.0"
torch = { version = "2.0.1", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
